@@ -62,7 +62,7 @@ public class DocumentViewerViewModel extends AbstractViewModel {
 
         // we need to wrap this in run later so that the max pages number is correctly shown
         Platform.runLater(() -> maxPages.bindBidirectional(
-            EasyBind.wrapNullable(currentDocument).selectProperty(DocumentViewModel::maxPagesProperty)));
+                EasyBind.wrapNullable(currentDocument).selectProperty(DocumentViewModel::maxPagesProperty)));
         setCurrentEntries(this.stateManager.getSelectedEntries());
     }
 
@@ -92,7 +92,7 @@ public class DocumentViewerViewModel extends AbstractViewModel {
 
     private void setCurrentEntries(List<BibEntry> entries) {
         if (!entries.isEmpty()) {
-            BibEntry firstSelectedEntry = entries.get(0);
+            BibEntry firstSelectedEntry = entries.getFirst();
             setCurrentEntry(firstSelectedEntry);
         }
     }
@@ -138,5 +138,9 @@ public class DocumentViewerViewModel extends AbstractViewModel {
 
     public void showPreviousPage() {
         currentPage.set(getCurrentPage() - 1);
+    }
+
+    public void setLiveMode(boolean value) {
+        this.liveMode.set(value);
     }
 }
