@@ -247,9 +247,9 @@ public class CopyMoreAction extends SimpleCommand {
                 LOGGER.debug("entry {} had no citation key, but it should have had one", entry);
             }
             String url = entry.getField(StandardField.URL).orElse("");
-            keyAndLink.append(url.isEmpty() ? key : String.format("<a href=\"%s\">%s</a>", url, key));
+            keyAndLink.append(url.isEmpty() ? key : "<a href=\"%s\">%s</a>".formatted(url, key));
             keyAndLink.append(OS.NEWLINE);
-            fallbackString.append(url.isEmpty() ? key : String.format("%s - %s", key, url));
+            fallbackString.append(url.isEmpty() ? key : "%s - %s".formatted(key, url));
             fallbackString.append(OS.NEWLINE);
         }
 
