@@ -396,6 +396,8 @@ public class ArXivFetcher implements FulltextFetcher, PagedSearchBasedFetcher, I
 
         private static final String API_URL = "https://export.arxiv.org/api/query";
 
+        private static final DocumentBuilderFactory DOCUMENT_BUILDER_FACTORY = DocumentBuilderFactory.newInstance();
+
         private final ImportFormatPreferences importFormatPreferences;
 
         public ArXiv(ImportFormatPreferences importFormatPreferences) {
@@ -429,7 +431,7 @@ public class ArXivFetcher implements FulltextFetcher, PagedSearchBasedFetcher, I
         private Optional<ArXivEntry> searchForEntry(String searchQuery) throws FetcherException {
             List<ArXivEntry> entries = queryApi(searchQuery, Collections.emptyList(), 0, 1);
             if (entries.size() == 1) {
-                return Optional.of(entries.get(0));
+                return Optional.of(entries.getFirst());
             } else {
                 return Optional.empty();
             }
@@ -443,7 +445,7 @@ public class ArXivFetcher implements FulltextFetcher, PagedSearchBasedFetcher, I
 
             List<ArXivEntry> entries = queryApi("", Collections.singletonList(identifier.get()), 0, 1);
             if (!entries.isEmpty()) {
-                return Optional.of(entries.get(0));
+                return Optional.of(entries.getFirst());
             } else {
                 return Optional.empty();
             }
@@ -541,8 +543,7 @@ public class ArXivFetcher implements FulltextFetcher, PagedSearchBasedFetcher, I
                 uriBuilder.addParameter("max_results", String.valueOf(maxResults));
                 URL url = uriBuilder.build().toURL();
 
-                DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-                DocumentBuilder builder = factory.newDocumentBuilder();
+                DocumentBuilder builder = DOCUMENT_BUILDER_FACTORY.newDocumentBuilder();
 
                 HttpURLConnection connection = (HttpURLConnection) url.openConnection();
                 if (connection.getResponseCode() == 400) {
@@ -568,7 +569,7 @@ public class ArXivFetcher implements FulltextFetcher, PagedSearchBasedFetcher, I
             //      <summary>incorrect id format for 0307015</summary>
             // </entry>
             if (entries.size() == 1) {
-                Node node = entries.get(0);
+                Node node = entries.getFirst();
                 Optional<String> id = XMLUtil.getNodeContent(node, "id");
                 Boolean isError = id.map(idContent -> idContent.startsWith("http://arxiv.org/api/errors")).orElse(false);
                 if (isError) {
