@@ -13,6 +13,7 @@ import java.util.regex.Pattern;
 
 import org.jabref.logic.cleanup.FieldFormatterCleanup;
 import org.jabref.logic.formatter.bibtexfields.ClearFormatter;
+import org.jabref.logic.formatter.bibtexfields.HtmlToLatexFormatter;
 import org.jabref.logic.formatter.bibtexfields.NormalizePagesFormatter;
 import org.jabref.logic.help.HelpFile;
 import org.jabref.logic.importer.EntryBasedFetcher;
@@ -90,7 +91,7 @@ public class DoiFetcher implements IdBasedFetcher, EntryBasedFetcher {
                     waitingTime = CROSSREF_DCN_RATE_LIMITER.acquire();
                 } // mEDRA does not explicit an API rating
 
-                LOGGER.trace(String.format("Thread %s, searching for DOI '%s', waited %.2fs because of API rate limiter",
+                LOGGER.trace("Thread %s, searching for DOI '%s', waited %.2fs because of API rate limiter".formatted(
                         Thread.currentThread().threadId(), identifier, waitingTime));
             }
         } catch (IOException e) {
@@ -177,6 +178,7 @@ public class DoiFetcher implements IdBasedFetcher, EntryBasedFetcher {
     private void doPostCleanup(BibEntry entry) {
         new FieldFormatterCleanup(StandardField.PAGES, new NormalizePagesFormatter()).cleanup(entry);
         new FieldFormatterCleanup(StandardField.URL, new ClearFormatter()).cleanup(entry);
+        new FieldFormatterCleanup(StandardField.TITLE, new HtmlToLatexFormatter()).cleanup(entry);
     }
 
     private void updateCrossrefAPIRate(URLConnection existingConnection) {
@@ -190,7 +192,7 @@ public class DoiFetcher implements IdBasedFetcher, EntryBasedFetcher {
 
             // In theory, the actual update might rarely happen...
             if (Math.abs(newRate - oldRate) >= 1.0) {
-                LOGGER.info(String.format("Updated Crossref API rate limit from %.2f to %.2f", oldRate, newRate));
+                LOGGER.info("Updated Crossref API rate limit from %.2f to %.2f".formatted(oldRate, newRate));
                 CROSSREF_DCN_RATE_LIMITER.setRate(newRate);
             }
         } catch (NullPointerException | IllegalArgumentException e) {
