@@ -6,8 +6,10 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+import org.jabref.logic.citationkeypattern.CitationKeyGenerator;
+import org.jabref.logic.citationkeypattern.CitationKeyPatternPreferences;
+import org.jabref.logic.exporter.CffExporter;
 import org.jabref.logic.importer.Importer;
 import org.jabref.logic.importer.ParserResult;
 import org.jabref.logic.util.StandardFileType;
@@ -18,14 +20,25 @@ import org.jabref.model.entry.field.BiblatexSoftwareField;
 import org.jabref.model.entry.field.Field;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.field.UnknownField;
+import org.jabref.model.entry.types.EntryType;
 import org.jabref.model.entry.types.StandardEntryType;
 
 import com.fasterxml.jackson.annotation.JsonAnySetter;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
+import com.google.common.collect.HashBiMap;
 
 public class CffImporter extends Importer {
+
+    public static final Map<String, Field> FIELDS_MAP = HashBiMap.create(CffExporter.FIELDS_MAP).inverse();
+    public static final Map<String, EntryType> TYPES_MAP = HashBiMap.create(CffExporter.TYPES_MAP).inverse();
+
+    private final CitationKeyPatternPreferences citationKeyPatternPreferences;
+
+    public CffImporter(CitationKeyPatternPreferences citationKeyPatternPreferences) {
+        this.citationKeyPatternPreferences = citationKeyPatternPreferences;
+    }
 
     @Override
     public String getName() {
@@ -44,7 +57,7 @@ public class CffImporter extends Importer {
 
     @Override
     public String getDescription() {
-        return "Importer for the CFF format. Is only used to cite software, one entry per file.";
+        return "Importer for the CFF format, which is intended to make software and datasets citable.";
     }
 
     // POJO classes for yaml data
@@ -52,10 +65,19 @@ public class CffImporter extends Importer {
         private final HashMap<String, String> values = new HashMap<>();
 
         @JsonProperty("authors")
-        private List<CffAuthor> authors;
+        private List<CffEntity> authors;
 
         @JsonProperty("identifiers")
         private List<CffIdentifier> ids;
+
+        @JsonProperty("keywords")
+        private List<String> keywords;
+
+        @JsonProperty("preferred-citation")
+        private CffReference preferred;
+
+        @JsonProperty("references")
+        private List<CffReference> references;
 
         public CffFormat() {
         }
@@ -66,10 +88,10 @@ public class CffImporter extends Importer {
         }
     }
 
-    private static class CffAuthor {
+    private static class CffEntity {
         private final HashMap<String, String> values = new HashMap<>();
 
-        public CffAuthor() {
+        public CffEntity() {
         }
 
         @JsonAnySetter
@@ -88,45 +110,95 @@ public class CffImporter extends Importer {
         }
     }
 
+    private static class CffReference {
+        private final HashMap<String, String> values = new HashMap<>();
+
+        @JsonProperty("authors")
+        private List<CffEntity> authors;
+
+        @JsonProperty("conference")
+        private CffEntity conference;
+
+        @JsonProperty("contact")
+        private CffEntity contact;
+
+        @JsonProperty("editors")
+        private List<CffEntity> editors;
+
+        @JsonProperty("editors-series")
+        private List<CffEntity> editorsSeries;
+
+        @JsonProperty("database-provider")
+        private CffEntity databaseProvider;
+
+        @JsonProperty("institution")
+        private CffEntity institution;
+
+        @JsonProperty("keywords")
+        private List<String> keywords;
+
+        @JsonProperty("languages")
+        private List<String> languages;
+
+        @JsonProperty("location")
+        private CffEntity location;
+
+        @JsonProperty("publisher")
+        private CffEntity publisher;
+
+        @JsonProperty("recipients")
+        private List<CffEntity> recipients;
+
+        @JsonProperty("senders")
+        private List<CffEntity> senders;
+
+        @JsonProperty("translators")
+        private List<CffEntity> translators;
+
+        @JsonProperty("type")
+        private String type;
+
+        public CffReference() {
+        }
+
+        @JsonAnySetter
+        private void setValues(String key, String value) {
+            values.put(key, value);
+        }
+    }
+
     @Override
     public ParserResult importDatabase(BufferedReader reader) throws IOException {
         ObjectMapper mapper = new ObjectMapper(new YAMLFactory());
         CffFormat citation = mapper.readValue(reader, CffFormat.class);
-        HashMap<Field, String> entryMap = new HashMap<>();
-        StandardEntryType entryType = StandardEntryType.Software;
+        List<BibEntry> entriesList = new ArrayList<>();
 
-        // Map CFF fields to JabRef Fields
-        HashMap<String, Field> fieldMap = getFieldMappings();
-        for (Map.Entry<String, String> property : citation.values.entrySet()) {
-            if (fieldMap.containsKey(property.getKey())) {
-                entryMap.put(fieldMap.get(property.getKey()), property.getValue());
-            } else if ("type".equals(property.getKey())) {
-                if ("dataset".equals(property.getValue())) {
-                    entryType = StandardEntryType.Dataset;
-                }
-            } else if (getUnmappedFields().contains(property.getKey())) {
-                entryMap.put(new UnknownField(property.getKey()), property.getValue());
-            }
-        }
+        // Remove CFF version and type
+        citation.values.remove("cff-version");
+
+        // Parse main entry
+        HashMap<Field, String> entryMap = new HashMap<>();
+        EntryType entryType = TYPES_MAP.getOrDefault(citation.values.get("type"), StandardEntryType.Software);
+        citation.values.remove("type");
 
         // Translate CFF author format to JabRef author format
-        String authorStr = citation.authors.stream()
-                        .map(author -> author.values)
-                        .map(vals -> vals.get("name") != null ?
-                                new Author(vals.get("name"), "", "", "", "") :
-                                new Author(vals.get("given-names"), null, vals.get("name-particle"),
-                                        vals.get("family-names"), vals.get("name-suffix")))
-                        .collect(AuthorList.collect())
-                        .getAsFirstLastNamesWithAnd();
-        entryMap.put(StandardField.AUTHOR, authorStr);
+        entryMap.put(StandardField.AUTHOR, parseAuthors(citation.authors));
+
+        // Parse keywords
+        if (citation.keywords != null) {
+            entryMap.put(StandardField.KEYWORDS, String.join(", ", citation.keywords));
+        }
+
+        // Map CFF simple fields to JabRef Fields
+        parseFields(citation.values, entryMap);
 
         // Select DOI to keep
         if ((entryMap.get(StandardField.DOI) == null) && (citation.ids != null)) {
             List<CffIdentifier> doiIds = citation.ids.stream()
                             .filter(id -> "doi".equals(id.type))
-                            .collect(Collectors.toList());
+                            .toList();
             if (doiIds.size() == 1) {
-                entryMap.put(StandardField.DOI, doiIds.get(0).value);
+                entryMap.put(StandardField.DOI, doiIds.getFirst().value);
             }
         }
 
@@ -135,28 +207,56 @@ public class CffImporter extends Importer {
             List<String> swhIds = citation.ids.stream()
                                            .filter(id -> "swh".equals(id.type))
                                            .map(id -> id.value)
-                                           .collect(Collectors.toList());
+                                           .toList();
 
             if (swhIds.size() == 1) {
-                entryMap.put(BiblatexSoftwareField.SWHID, swhIds.get(0));
+                entryMap.put(BiblatexSoftwareField.SWHID, swhIds.getFirst());
             } else if (swhIds.size() > 1) {
                 List<String> relSwhIds = swhIds.stream()
                                                .filter(id -> id.split(":").length > 3) // quick filter for invalid swhids
                                                .filter(id -> "rel".equals(id.split(":")[2]))
-                                               .collect(Collectors.toList());
+                                               .toList();
                 if (relSwhIds.size() == 1) {
-                    entryMap.put(BiblatexSoftwareField.SWHID, relSwhIds.get(0));
+                    entryMap.put(BiblatexSoftwareField.SWHID, relSwhIds.getFirst());
                 }
             }
         }
 
         BibEntry entry = new BibEntry(entryType);
         entry.setField(entryMap);
-
-        List<BibEntry> entriesList = new ArrayList<>();
         entriesList.add(entry);
 
-        return new ParserResult(entriesList);
+        // Handle `preferred-citation` and `references` fields
+        BibEntry preferred = null;
+        List<BibEntry> references = null;
+
+        if (citation.preferred != null) {
+            preferred = parseEntry(citation.preferred);
+            entriesList.add(preferred);
+        }
+
+        if (citation.references != null) {
+            references = citation.references.stream().map(this::parseEntry).toList();
+            entriesList.addAll(references);
+        }
+
+        ParserResult res = new ParserResult(entriesList);
+        CitationKeyGenerator gen = new CitationKeyGenerator(res.getDatabaseContext(), citationKeyPatternPreferences);
+
+        if (preferred != null) {
+            gen.generateAndSetKey(preferred);
+            entry.setField(StandardField.CITES, preferred.getCitationKey().orElse(""));
+        }
+
+        if (references != null) {
+            references.forEach(ref -> {
+                gen.generateAndSetKey(ref);
+                String citeKey = ref.getCitationKey().orElse("");
+                String related = entry.getField(StandardField.RELATED).orElse("");
+                entry.setField(StandardField.RELATED, related.isEmpty() ? citeKey : related + "," + citeKey);
+            });
+        }
+        return res;
     }
 
     @Override
@@ -173,29 +273,34 @@ public class CffImporter extends Importer {
         }
     }
 
-    private HashMap<String, Field> getFieldMappings() {
-        HashMap<String, Field> fieldMappings = new HashMap<>();
-        fieldMappings.put("title", StandardField.TITLE);
-        fieldMappings.put("version", StandardField.VERSION);
-        fieldMappings.put("doi", StandardField.DOI);
-        fieldMappings.put("license", BiblatexSoftwareField.LICENSE);
-        fieldMappings.put("repository", BiblatexSoftwareField.REPOSITORY);
-        fieldMappings.put("url", StandardField.URL);
-        fieldMappings.put("abstract", StandardField.ABSTRACT);
-        fieldMappings.put("message", StandardField.COMMENT);
-        fieldMappings.put("date-released", StandardField.DATE);
-        fieldMappings.put("keywords", StandardField.KEYWORDS);
-        return fieldMappings;
+    private String parseAuthors(List<CffEntity> authors) {
+        return authors.stream()
+                      .map(author -> author.values)
+                      .map(vals -> vals.get("name") != null ?
+                              new Author(vals.get("name"), "", "", "", "") :
+                              new Author(vals.get("given-names"), null, vals.get("name-particle"),
+                                      vals.get("family-names"), vals.get("name-suffix")))
+                      .collect(AuthorList.collect())
+                      .getAsFirstLastNamesWithAnd();
     }
 
-    private List<String> getUnmappedFields() {
-        List<String> fields = new ArrayList<>();
+    private BibEntry parseEntry(CffReference reference) {
+        Map<Field, String> entryMap = new HashMap<>();
+        EntryType entryType = TYPES_MAP.getOrDefault(reference.type, StandardEntryType.Article);
+        entryMap.put(StandardField.AUTHOR, parseAuthors(reference.authors));
+        parseFields(reference.values, entryMap);
+        BibEntry entry = new BibEntry(entryType);
+        entry.setField(entryMap);
+        return entry;
+    }
 
-        fields.add("commit");
-        fields.add("license-url");
-        fields.add("repository-code");
-        fields.add("repository-artifact");
-
-        return fields;
+    private void parseFields(Map<String, String> values, Map<Field, String> entryMap) {
+        for (Map.Entry<String, String> property : values.entrySet()) {
+            if (FIELDS_MAP.containsKey(property.getKey())) {
+                entryMap.put(FIELDS_MAP.get(property.getKey()), property.getValue());
+            } else {
+                entryMap.put(new UnknownField(property.getKey()), property.getValue());
+            }
+        }
     }
 }
