@@ -188,21 +188,21 @@ class JournalAbbreviationsViewModelTabTest {
     }
 
     @Test
-    void testInitialHasNoFilesAndNoAbbreviations() {
+    void initialHasNoFilesAndNoAbbreviations() {
         assertEquals(0, viewModel.journalFilesProperty().size());
         assertEquals(0, viewModel.abbreviationsProperty().size());
     }
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testInitialWithSavedFilesIncrementsFilesCounter(TestData testData) throws IOException {
+    void initialWithSavedFilesIncrementsFilesCounter(TestData testData) throws IOException {
         addFourTestFileToViewModelAndPreferences(testData);
         assertEquals(4, viewModel.journalFilesProperty().size());
     }
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testRemoveDuplicatesWhenReadingFiles(TestData testData) throws IOException {
+    void removeDuplicatesWhenReadingFiles(TestData testData) throws IOException {
         addFourTestFileToViewModelAndPreferences(testData);
         viewModel.selectLastJournalFile();
 
@@ -222,7 +222,7 @@ class JournalAbbreviationsViewModelTabTest {
     @ParameterizedTest
     @MethodSource("provideTestFiles")
     void addDuplicatedFileResultsInErrorDialog(TestData testData) throws IOException {
-        when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(0))));
+        when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.getFirst())));
         viewModel.addNewFile();
         viewModel.addNewFile();
         verify(dialogService).showErrorDialogAndWait(anyString(), anyString());
@@ -230,8 +230,8 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testOpenDuplicatedFileResultsInAnException(TestData testData) throws IOException {
-        when(dialogService.showFileOpenDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(0))));
+    void openDuplicatedFileResultsInAnException(TestData testData) throws IOException {
+        when(dialogService.showFileOpenDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.getFirst())));
         viewModel.openFile();
         viewModel.openFile();
         verify(dialogService).showErrorDialogAndWait(anyString(), anyString());
@@ -239,13 +239,13 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testSelectLastJournalFileSwitchesFilesAndTheirAbbreviations(TestData testData) throws IOException {
+    void selectLastJournalFileSwitchesFilesAndTheirAbbreviations(TestData testData) throws IOException {
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(emptyTestFile));
         viewModel.addNewFile();
         viewModel.selectLastJournalFile();
         assertEquals(0, viewModel.abbreviationsCountProperty().get());
 
-        when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(0))));
+        when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.getFirst())));
         viewModel.addNewFile();
         viewModel.selectLastJournalFile();
         assertEquals(1, viewModel.abbreviationsCountProperty().get());
@@ -253,7 +253,7 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testOpenValidFileContainsTheSpecificEntryAndEnoughAbbreviations(TestData testData) throws IOException {
+    void openValidFileContainsTheSpecificEntryAndEnoughAbbreviations(TestData testData) throws IOException {
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(2))));
         viewModel.addNewFile();
         viewModel.selectLastJournalFile();
@@ -266,8 +266,8 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testRemoveLastListSetsCurrentFileAndCurrentAbbreviationToNull(TestData testData) throws IOException {
-        when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(0))));
+    void removeLastListSetsCurrentFileAndCurrentAbbreviationToNull(TestData testData) throws IOException {
+        when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.getFirst())));
         viewModel.addNewFile();
         viewModel.removeCurrentFile();
 
@@ -279,7 +279,7 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testMixedFileUsage(TestData testData) throws IOException {
+    void mixedFileUsage(TestData testData) throws IOException {
         // simulate open file button twice
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(1))));
         viewModel.addNewFile();
@@ -323,10 +323,10 @@ class JournalAbbreviationsViewModelTabTest {
     }
 
     @Test
-    void testBuiltInListsIncludeAllBuiltInAbbreviations() {
+    void builtInListsIncludeAllBuiltInAbbreviations() {
         viewModel.addBuiltInList();
         assertEquals(1, viewModel.journalFilesProperty().getSize());
-        viewModel.currentFileProperty().set(viewModel.journalFilesProperty().get(0));
+        viewModel.currentFileProperty().set(viewModel.journalFilesProperty().getFirst());
         ObservableList<Abbreviation> expected = FXCollections.observableArrayList(repository.getAllLoaded());
         ObservableList<Abbreviation> actualAbbreviations = FXCollections
                 .observableArrayList(viewModel.abbreviationsProperty().stream()
@@ -338,14 +338,14 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testCurrentFilePropertyChangeActiveFile(TestData testData) throws IOException {
+    void currentFilePropertyChangeActiveFile(TestData testData) throws IOException {
         for (CsvFileNameAndContent testFile : testData.csvFiles) {
             when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testFile)));
             viewModel.addNewFile();
         }
         viewModel.selectLastJournalFile();
 
-        AbbreviationsFileViewModel test1 = viewModel.journalFilesProperty().get(0);
+        AbbreviationsFileViewModel test1 = viewModel.journalFilesProperty().getFirst();
         AbbreviationsFileViewModel test3 = viewModel.journalFilesProperty().get(1);
         AbbreviationsFileViewModel test4 = viewModel.journalFilesProperty().get(2);
         AbbreviationsFileViewModel test5 = viewModel.journalFilesProperty().get(3);
@@ -370,7 +370,7 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testAddAbbreviationIncludesAbbreviationsInAbbreviationList(TestData testData) throws IOException {
+    void addAbbreviationIncludesAbbreviationsInAbbreviationList(TestData testData) throws IOException {
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(2))));
         viewModel.addNewFile();
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(3))));
@@ -385,7 +385,7 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testAddDuplicatedAbbreviationResultsInException(TestData testData) throws IOException {
+    void addDuplicatedAbbreviationResultsInException(TestData testData) throws IOException {
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(1))));
         viewModel.addNewFile();
         viewModel.selectLastJournalFile();
@@ -395,7 +395,7 @@ class JournalAbbreviationsViewModelTabTest {
     }
 
     @Test
-    void testEditSameAbbreviationWithNoChangeDoesNotResultInException() {
+    void editSameAbbreviationWithNoChangeDoesNotResultInException() {
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(emptyTestFile));
         viewModel.addNewFile();
         viewModel.selectLastJournalFile();
@@ -408,7 +408,7 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testEditAbbreviationIncludesNewAbbreviationInAbbreviationsList(TestData testData) throws IOException {
+    void editAbbreviationIncludesNewAbbreviationInAbbreviationsList(TestData testData) throws IOException {
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(2))));
         viewModel.addNewFile();
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(3))));
@@ -432,7 +432,7 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testEditAbbreviationToExistingOneResultsInException(TestData testData) throws IOException {
+    void editAbbreviationToExistingOneResultsInException(TestData testData) throws IOException {
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(1))));
         viewModel.addNewFile();
         viewModel.selectLastJournalFile();
@@ -448,7 +448,7 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testEditAbbreviationToEmptyNameResultsInException(TestData testData) throws IOException {
+    void editAbbreviationToEmptyNameResultsInException(TestData testData) throws IOException {
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(1))));
         viewModel.addNewFile();
         viewModel.selectLastJournalFile();
@@ -462,7 +462,7 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testEditAbbreviationToEmptyAbbreviationResultsInException(TestData testData) throws IOException {
+    void editAbbreviationToEmptyAbbreviationResultsInException(TestData testData) throws IOException {
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(createTestFile(testData.csvFiles.get(1))));
         viewModel.addNewFile();
         viewModel.selectLastJournalFile();
@@ -476,7 +476,7 @@ class JournalAbbreviationsViewModelTabTest {
 
     @ParameterizedTest
     @MethodSource("provideTestFiles")
-    void testSaveAbbreviationsToFilesCreatesNewFilesWithWrittenAbbreviations(TestData testData) throws Exception {
+    void saveAbbreviationsToFilesCreatesNewFilesWithWrittenAbbreviations(TestData testData) throws Exception {
         Path testFile2 = createTestFile(testData.csvFiles.get(2));
         when(dialogService.showFileSaveDialog(any())).thenReturn(Optional.of(testFile2));
         viewModel.addNewFile();
